# RFID_Reader_Software

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/COMMON/: CMakelists.txt  rfidcommon.c  rfidcommon.h
components/LED/: CMakeLists.txt  led.c  led.h
components/OLED/: CMakeLists.txt  OLEDDisplay.c  OLEDDisplay.h  OLEDDisplayFonts.c  OLEDDisplayFonts.h
components/RFIDModule/: CMakeLists.txt  CMakelists.txt  rfidmodule.c  rfidmodule.h
components/RS485/: CMakeLists.txt  CMakelists.txt  modbus_rtu.c  modbus_rtu.h
components/SC16IS752/: CMakeLists.txt  sc16is752.c  sc16is752.h
components/SHT30/: CMakeLists.txt  sht30.c  sht30.h
components/TP1107/: CMakeLists.txt  tp1107.c  tp1107.h
components/at/: CMakeLists.txt  algo_array_queue.c  algo_array_queue.h  at.c  at.h  at_utils.c  at_utils.h
components/chry_ringbuffer/: CMakelists.txt
components/driver_uart/: CMakeLists.txt  Kconfig  driver_uart.c  driver_uart.h
components/iot_usbh/: iot_usbh.c
components/iot_usbh_modem/: CMakeLists.txt  Kconfig
components/ntc_temp_adc/: CMakeLists.txt  ntc_temp_adc.c  ntc_temp_adc.h
components/tp1107/: CmakeLists.txt  tp1107.c  tp1107.h
main/: CMakeLists.txt  Kconfig.projbuild  app_tasks.c  app_tasks.h  data_deal.c  data_deal.h  dev_info.c  dev_info.h  httpconfig.c  httpconfig.h  idf_component.yml  main.c  parameter.c  parameter.h  rfidnetwork.c  rfidnetwork.h
spiffs/: index.html
spiffs/css/: 106.3ff365e6.css  379.99545538.css  523.1ff58d41.css  561.5ff57b80.css  580.72992a1c.css  594.1968d81c.css  (+6 more)
(+17 files in other folders)
